--- a/css/main.css
+++ b/css/main.css
@@ -752,6 +752,12 @@ footer {
     h1 {
         font-size: 64px;
     }
+    .btn-offer:first-child {
+        margin-bottom: 5%;
+    }
+    .btn-offer:last-child {
+        margin-left: -1.1%;
+    }
     .main-bottom {
         margin-top: 15%;
     }
